--- a/views/content-single-entry-header.twig
+++ b/views/content-single-entry-header.twig
@@ -1,7 +1,7 @@
 {% import 'grid_classes.html.twig' as grid %}
 
 <div class="entry-header">
-	{% if post.thumbnail and theme_mods.feat_img_height %}
+	{% if post.thumbnail and theme.theme_mod('feat_img_height', 60) %}
 	<div class="parallax-container featured-image">
 		<a class="parallax featured-image" href="{{ post.link }}" title="{{ post.title }}">
 			<img class="featured-image" src="{{ post.thumbnail.src|resize(thumbnail.width, thumbnail.height) }}" srcset="{{ post.thumbnail.src|resize(thumbnail.width, thumbnail.height)|retina(1) }} 1x, {{ post.thumbnail.src|resize(thumbnail.width, thumbnail.height)|retina(2) }}  2x">
