--- a/assets/css/maera-materialize.css
+++ b/assets/css/maera-materialize.css
@@ -1606,19 +1606,23 @@
 .white-text {
   color: #FFFFFF !important; }
 
+/*** Colors ***/
+/*** Badges ***/
 /*** Buttons ***/
 /*** Cards ***/
 /*** Collapsible ***/
+/*** Dropdown ***/
 /*** Forms ***/
 /*** Global ***/
 /*** Navbar ***/
 /*** SideNav ***/
+/*** Tabs ***/
 /*** Tables ***/
 /*** Toasts ***/
 /*** Typography ***/
 /*** Collections ***/
 /* Progress Bar */
-/*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
  * 1. Set default font family to sans-serif.
  * 2. Prevent iOS text size adjust after orientation change, without disabling
@@ -1642,7 +1646,8 @@ body {
    ========================================================================== */
 /**
  * Correct `block` display not defined for any HTML5 element in IE 8/9.
- * Correct `block` display not defined for `details` or `summary` in IE 10/11 and Firefox.
+ * Correct `block` display not defined for `details` or `summary` in IE 10/11
+ * and Firefox.
  * Correct `block` display not defined for `main` in IE 11.
  */
 article,
@@ -1654,6 +1659,7 @@ footer,
 header,
 hgroup,
 main,
+menu,
 nav,
 section,
 summary {
@@ -1694,7 +1700,7 @@ template {
  * Remove the gray background color from active links in IE 10.
  */
 a {
-  background: transparent; }
+  background-color: transparent; }
 
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
@@ -1986,7 +1992,7 @@ ul {
   list-style-type: none; }
 
 a {
-  color: #1E88E5;
+  color: #039be5;
   text-decoration: none; }
 
 .valign-wrapper {
@@ -2020,7 +2026,7 @@ ul.side-nav.fixed {
 button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
-input[type="submit"]:hover, .btn-floating:hover, .modal {
+input[type="submit"]:hover, .btn-floating:hover {
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15); }
 
 .z-depth-2 {
@@ -2029,7 +2035,7 @@ input[type="submit"]:hover, .btn-floating:hover, .modal {
 .z-depth-3 {
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
 
-.z-depth-4 {
+.z-depth-4, .modal {
   box-shadow: 0 16px 28px 0 rgba(0, 0, 0, 0.22), 0 25px 55px 0 rgba(0, 0, 0, 0.21); }
 
 .z-depth-5 {
@@ -2053,6 +2059,8 @@ i {
   i.right {
     float: right;
     margin-left: 15px; }
+  i.tiny {
+    font-size: 1rem; }
   i.small {
     font-size: 2rem; }
   i.medium {
@@ -2126,6 +2134,8 @@ footer.page-footer {
   padding-top: 20px;
   background-color: #ee6e73; }
   footer.page-footer .footer-copyright {
+    overflow: hidden;
+    height: 50px;
     line-height: 50px;
     color: rgba(255, 255, 255, 0.8);
     background-color: rgba(51, 51, 51, 0.08); }
@@ -2159,56 +2169,56 @@ td, th {
   border-radius: 2px; }
 
 @media only screen and (max-width: 992px) {
-  table {
+  table.responsive-table {
     width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
     display: block;
     position: relative;
     /* sort out borders */ }
-    table th,
-    table td {
+    table.responsive-table th,
+    table.responsive-table td {
       margin: 0;
       vertical-align: top; }
-    table th {
+    table.responsive-table th {
       text-align: left; }
-    table thead {
+    table.responsive-table thead {
       display: block;
       float: left; }
-      table thead tr {
+      table.responsive-table thead tr {
         display: block;
         padding: 0 10px 0 0; }
-    table tbody {
+    table.responsive-table tbody {
       display: block;
       width: auto;
       position: relative;
       overflow-x: auto;
       white-space: nowrap; }
-      table tbody tr {
+      table.responsive-table tbody tr {
         display: inline-block;
         vertical-align: top; }
-    table th {
+    table.responsive-table th {
       display: block;
       text-align: right; }
-    table td {
+    table.responsive-table td {
       display: block;
       min-height: 1.25em;
       text-align: left; }
-    table tr {
+    table.responsive-table tr {
       padding: 0 10px; }
-    table thead {
+    table.responsive-table thead {
       border: 0;
       border-right: 1px solid #d0d0d0; }
-    table.bordered th {
+    table.responsive-table.bordered th {
       border-bottom: 0;
       border-left: 0; }
-    table.bordered td {
+    table.responsive-table.bordered td {
       border-left: 0;
       border-right: 0;
       border-bottom: 0; }
-    table.bordered tr {
+    table.responsive-table.bordered tr {
       border: 0; }
-    table.bordered tbody tr {
+    table.responsive-table.bordered tbody tr {
       border-right: 1px solid #d0d0d0; } }
 .collection {
   background-color: #fff;
@@ -2223,12 +2233,16 @@ td, th {
     .collection .collection-item:last-child {
       border-bottom: none; }
     .collection .collection-item.active {
-      background-color: #42A5F5;
-      color: #BBDEFB; }
+      background-color: #26a69a;
+      color: #eafaf9; }
+    .collection .collection-item .secondary-content {
+      float: right;
+      color: #26a69a; }
   .collection a.collection-item {
     display: block;
     -webkit-transition: 0.25s;
-    transition: 0.25s; }
+    transition: 0.25s;
+    color: #26a69a; }
     .collection a.collection-item:not(.active):hover {
       background-color: rgba(0, 0, 0, 0.08); }
   .collection.with-header .collection-header {
@@ -2236,8 +2250,6 @@ td, th {
     padding: 10px 20px; }
   .collection.with-header .collection-item {
     padding-left: 30px; }
-  .collection .secondary-content {
-    float: right; }
   .collection.pagination {
     display: inline-block; }
     .collection.pagination ul {
@@ -2272,7 +2284,7 @@ span.badge {
     font-weight: 300;
     font-size: 0.8rem;
     color: #fff;
-    background-color: #2196F3;
+    background-color: #26a69a;
     border-radius: 2px;
     background-clip: padding-box; }
   span.badge.new:after {
@@ -2296,7 +2308,7 @@ span.badge {
   height: 4px;
   display: block;
   width: 100%;
-  background-color: #c5ecfe;
+  background-color: #acece6;
   border-radius: 2px;
   background-clip: padding-box;
   margin: 0.5rem 0 1rem 0;
@@ -2306,11 +2318,11 @@ span.badge {
     background-color: inherit;
     top: 0;
     bottom: 0;
-    background-color: #03a9f4;
+    background-color: #26a69a;
     -webkit-transition: width 0.3s linear;
     transition: width 0.3s linear; }
   .progress .indeterminate {
-    background-color: #03a9f4; }
+    background-color: #26a69a; }
     .progress .indeterminate:before {
       content: '';
       position: absolute;
@@ -4935,7 +4947,7 @@ nav {
     padding-left: 2rem;
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
-    nav .input-field input:focus, nav .input-field input[type=text]:valid, nav .input-field input[type=password]:valid, nav .input-field input[type=email]:valid, nav .input-field input[type=date]:valid {
+    nav .input-field input:focus, nav .input-field input[type=text]:valid, nav .input-field input[type=password]:valid, nav .input-field input[type=email]:valid, nav .input-field input[type=url]:valid, nav .input-field input[type=date]:valid {
       border: none;
       box-shadow: none; }
   nav .input-field label {
@@ -5263,6 +5275,8 @@ small {
     padding: 20px;
     position: absolute;
     background-color: #FFF;
+    width: 100%;
+    overflow-y: auto;
     top: 100%;
     height: 100%;
     z-index: 1;
@@ -5326,7 +5340,9 @@ small {
     border-radius: 24px; }
   @media only screen and (max-width: 600px) {
     .toast {
-      width: 100%; } }
+      width: 100%;
+      border-radius: 0px;
+      background-clip: padding-box; } }
   @media only screen and (min-width: 601px) and (max-width: 992px) {
     .toast {
       float: left; } }
@@ -5361,12 +5377,12 @@ small {
       -webkit-transition: color 0.28s ease;
       transition: color 0.28s ease; }
       .tabs li.tab a:hover {
-        color: #f8c1c3; }
+        color: #f9c9cb; }
   .tabs .indicator {
     position: absolute;
     bottom: 0;
     height: 2px;
-    background-color: #ee6e73;
+    background-color: #f6b2b5;
     will-change: left, right; }
 
 ul.tabs li.tab {
@@ -5460,7 +5476,12 @@ input[type="submit"]:disabled {
     background-color: #DFDFDF;
     color: #9F9F9F; }
 
-.btn i, .btn-large i, .btn-floating i, .btn-large i, .btn-flat i {
+.btn i, .btn-large i,
+.btn-flat i,
+button i,
+input[type="button"] i,
+input[type="reset"] i,
+input[type="submit"] i {
   font-size: 1.3rem;
   line-height: inherit; }
 
@@ -5471,7 +5492,7 @@ input[type="reset"],
 input[type="submit"] {
   text-decoration: none;
   color: #FFF;
-  background-color: #2196F3;
+  background-color: #26a69a;
   text-align: center;
   letter-spacing: .5px;
   -webkit-transition: 0.2s ease-out;
@@ -5482,7 +5503,7 @@ input[type="submit"] {
   input[type="button"]:hover,
   input[type="reset"]:hover,
   input[type="submit"]:hover {
-    background-color: #39a1f4; }
+    background-color: #2bbbad; }
 
 .btn-floating {
   display: inline-block;
@@ -5492,7 +5513,7 @@ input[type="submit"] {
   height: 37px;
   line-height: 37px;
   padding: 0;
-  background-color: #2196F3;
+  background-color: #26a69a;
   border-radius: 50%;
   background-clip: padding-box;
   -webkit-transition: 0.3s;
@@ -5545,7 +5566,8 @@ input[type="submit"] {
       background-color: rgba(0, 0, 0, 0.06); }
     .dropdown-content li > a, .dropdown-content li > span {
       display: block;
-      padding: 1rem 1rem; }
+      padding: 1rem 1rem;
+      color: #26a69a; }
 
 /*!
  * Waves v0.6.0
@@ -5637,12 +5659,12 @@ a.waves-effect .waves-ripple {
 .modal {
   display: none;
   position: fixed;
+  left: 0;
+  right: 0;
   background-color: #eee;
   padding: 24px;
   max-height: 70%;
-  max-width: 55%;
-  left: 0;
-  right: 0;
+  width: 55%;
   margin: auto;
   overflow-y: auto;
   z-index: 1000;
@@ -5671,8 +5693,11 @@ a.waves-effect .waves-ripple {
   display: none;
   will-change: opacity; }
 
+.action-bar {
+  text-align: right;
+  margin-top: 10px; }
+
 .modal-action {
-  margin-top: 10px;
   margin-bottom: 0px; }
 
 .collapsible {
@@ -5783,7 +5808,7 @@ select:focus {
 
 button:focus {
   outline: none;
-  background-color: #51adf6; }
+  background-color: #30d0c1; }
 
 label {
   font-size: 0.8rem;
@@ -5812,26 +5837,32 @@ label {
   .input-field input[type=text]:focus + label,
   .input-field input[type=password]:focus + label,
   .input-field input[type=email]:focus + label,
+  .input-field input[type=url]:focus + label,
   .input-field input[type=date]:focus + label,
   .input-field input[type=tel]:focus + label,
   .input-field input[type=number]:focus + label,
+  .input-field input[type=search]:focus + label,
   .input-field textarea:focus.materialize-textarea + label {
-    color: #03a9f4; }
+    color: #26a69a; }
   .input-field input[type=text].valid,
   .input-field input[type=password].valid,
   .input-field input[type=email].valid,
+  .input-field input[type=url].valid,
   .input-field input[type=date].valid,
   .input-field input[type=tel].valid,
   .input-field input[type=number].valid,
+  .input-field input[type=search].valid,
   .input-field textarea.materialize-textarea.valid {
     border-bottom: 1px solid #4CAF50;
     box-shadow: 0 1px 0 0 #4CAF50; }
   .input-field input[type=text].invalid,
   .input-field input[type=password].invalid,
   .input-field input[type=email].invalid,
+  .input-field input[type=url].invalid,
   .input-field input[type=date].invalid,
   .input-field input[type=tel].invalid,
   .input-field input[type=number].invalid,
+  .input-field input[type=search].invalid,
   .input-field textarea.materialize-textarea.invalid {
     border-bottom: 1px solid #F44336;
     box-shadow: 0 1px 0 0 #F44336; }
@@ -5842,7 +5873,7 @@ label {
     -webkit-transition: color 0.2s;
     transition: color 0.2s; }
     .input-field .prefix.active {
-      color: #03a9f4; }
+      color: #26a69a; }
   .input-field .prefix ~ input,
   .input-field .prefix ~ textarea {
     margin-left: 3rem;
@@ -5869,9 +5900,11 @@ textarea {
 input[type=text],
 input[type=password],
 input[type=email],
+input[type=url],
 input[type=date],
 input[type=tel],
 input[type=number],
+input[type=search],
 textarea.materialize-textarea {
   background-color: transparent;
   border: none;
@@ -5891,12 +5924,14 @@ textarea.materialize-textarea {
 input[type=text]:focus,
 input[type=password]:focus,
 input[type=email]:focus,
+input[type=url]:focus,
 input[type=date]:focus,
 input[type=tel]:focus,
 input[type=number]:focus,
+input[type=search]:focus,
 textarea:focus.materialize-textarea {
-  border-bottom: 1px solid #03a9f4;
-  box-shadow: 0 1px 0 0 #03a9f4; }
+  border-bottom: 1px solid #26a69a;
+  box-shadow: 0 1px 0 0 #26a69a; }
 
 textarea.materialize-textarea {
   overflow-y: hidden;
@@ -5976,8 +6011,8 @@ textarea.materialize-textarea {
 
 [type="radio"]:checked + label:after {
   border-radius: 50%;
-  border: 2px solid #0f9d58;
-  background-color: #0f9d58;
+  border: 2px solid #26a69a;
+  background-color: #26a69a;
   z-index: 0;
   -webkit-transform: scale(1.02);
   -ms-transform: scale(1.02);
@@ -5986,12 +6021,12 @@ textarea.materialize-textarea {
 /* Radio With gap */
 [type="radio"].with-gap:checked + label:before {
   border-radius: 50%;
-  border: 2px solid #0f9d58; }
+  border: 2px solid #26a69a; }
 
 [type="radio"].with-gap:checked + label:after {
   border-radius: 50%;
-  border: 2px solid #0f9d58;
-  background-color: #0f9d58;
+  border: 2px solid #26a69a;
+  background-color: #26a69a;
   z-index: 0;
   -webkit-transform: scale(0.5);
   -ms-transform: scale(0.5);
@@ -6071,8 +6106,8 @@ form p:last-child {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #0f9d58;
-  border-bottom: 2px solid #0f9d58;
+  border-right: 2px solid #26a69a;
+  border-bottom: 2px solid #26a69a;
   -webkit-transform: rotateZ(40deg);
   -ms-transform: rotateZ(40deg);
   transform: rotateZ(40deg);
@@ -6228,7 +6263,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #0f9d58;
+  background-color: #26a69a;
   top: 10px;
   margin-left: -6px;
   -webkit-transform-origin: 50% 50%;
@@ -6241,7 +6276,7 @@ input[type=range] + .thumb {
     display: block;
     width: 30px;
     text-align: center;
-    color: #0f9d58;
+    color: #26a69a;
     font-size: 0px;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
@@ -6271,7 +6306,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background-color: #0f9d58;
+  background-color: #26a69a;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
   margin: -5px 0 0 0;
@@ -6296,7 +6331,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #0f9d58;
+  background: #26a69a;
   margin-top: -5px; }
 
 /*hide the outline behind the border*/
@@ -6328,7 +6363,7 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #0f9d58; }
+  background: #26a69a; }
 
 input[type=range]:focus::-ms-fill-lower {
   background: #888; }
@@ -6400,7 +6435,7 @@ ul.table-of-contents a {
       color: #444; } }
 .drag-target {
   height: 100%;
-  width: 10%;
+  width: 10px;
   position: fixed;
   top: 0;
   z-index: 998; }
@@ -6458,6 +6493,13 @@ ul.side-nav.fixed {
     ul.side-nav.fixed.right-aligned {
       right: -250px;
       left: auto; } }
+ul.side-nav .collapsible-body li.active,
+ul.side-nav.fixed .collapsible-body li.active {
+  background-color: #ee6e73; }
+  ul.side-nav .collapsible-body li.active a,
+  ul.side-nav.fixed .collapsible-body li.active a {
+    color: #fff; }
+
 #sidenav-overlay {
   position: fixed;
   top: 0px;
