Updating Materialize to 0.95.1

--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -78,6 +78,7 @@ input[type="submit"] {
 // Floating button
 .btn-floating {
   display: inline-block;
+  color: $button-color-raised;
   position: relative;
   z-index: 1;
   width: $button-floating-size;
