--- a/assets/css/maera-materialize.css
+++ b/assets/css/maera-materialize.css
@@ -1793,7 +1793,6 @@ figure {
  * Address differences between Firefox and other browsers.
  */
 hr {
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0; }
 
@@ -1900,8 +1899,7 @@ input {
  */
 input[type="checkbox"],
 input[type="radio"] {
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */ }
@@ -1923,7 +1921,6 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
-  -moz-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -1981,12 +1978,10 @@ th {
   padding: 0; }
 
 html {
-  -moz-box-sizing: border-box;
-       box-sizing: border-box; }
+  box-sizing: border-box; }
 
 *, *:before, *:after {
-  -moz-box-sizing: inherit;
-       box-sizing: inherit; }
+  box-sizing: inherit; }
 
 ul {
   list-style-type: none; }
@@ -1996,16 +1991,19 @@ a {
   text-decoration: none; }
 
 .valign-wrapper {
+  display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
   -webkit-flex-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
   -webkit-justify-content: center;
-  -ms-flex-pack: center;
-      justify-content: center; }
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
   .valign-wrapper .valign {
     display: block; }
 
@@ -2235,9 +2233,6 @@ td, th {
     .collection .collection-item.active {
       background-color: #26a69a;
       color: #eafaf9; }
-    .collection .collection-item .secondary-content {
-      float: right;
-      color: #26a69a; }
   .collection a.collection-item {
     display: block;
     -webkit-transition: 0.25s;
@@ -2270,6 +2265,10 @@ td, th {
       .collection.pagination li:hover {
         background-color: #e1f5fe; }
 
+.secondary-content {
+  float: right;
+  color: #26a69a; }
+
 span.badge {
   min-width: 3rem;
   padding: 0 6px;
@@ -2278,7 +2277,6 @@ span.badge {
   line-height: inherit;
   color: #757575;
   float: right;
-  -moz-box-sizing: border-box;
   box-sizing: border-box; }
   span.badge.new {
     font-weight: 300;
@@ -4702,7 +4700,6 @@ span.badge {
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
     float: left;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
     padding: 0 0.75rem; }
     .row .col.s1 {
@@ -4945,7 +4942,6 @@ nav {
     font-size: 1.2rem;
     border: none;
     padding-left: 2rem;
-    -moz-box-sizing: border-box;
     box-sizing: border-box; }
     nav .input-field input:focus, nav .input-field input[type=text]:valid, nav .input-field input[type=password]:valid, nav .input-field input[type=email]:valid, nav .input-field input[type=url]:valid, nav .input-field input[type=date]:valid {
       border: none;
@@ -5208,7 +5204,6 @@ small {
   overflow: hidden;
   margin: 0.5rem 0 1rem 0;
   background-color: #fff;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   border-radius: 2px;
   background-clip: padding-box; }
@@ -5261,7 +5256,6 @@ small {
     padding: 20px;
     border-radius: 0 0 2px 2px;
     background-clip: padding-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box; }
     .card .card-content p {
       margin: 0;
@@ -5280,7 +5274,6 @@ small {
     top: 100%;
     height: 100%;
     z-index: 1;
-    -moz-box-sizing: border-box;
     box-sizing: border-box; }
     .card .card-reveal .card-title {
       cursor: pointer;
@@ -5308,7 +5301,6 @@ small {
 .toast {
   border-radius: 2px;
   background-clip: padding-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   top: 0px;
   width: auto;
@@ -5323,16 +5315,19 @@ small {
   font-size: 1.1rem;
   font-weight: 300;
   color: #fff;
+  display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
   -webkit-flex-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
   -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-      justify-content: space-between; }
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
   .toast .btn, .toast .btn-large, .toast .btn-flat {
     margin: 0;
     margin-left: 3rem; }
@@ -5507,6 +5502,7 @@ input[type="submit"] {
 
 .btn-floating {
   display: inline-block;
+  color: #FFF;
   position: relative;
   z-index: 1;
   width: 37px;
@@ -5647,7 +5643,8 @@ input[type="submit"] {
   width: 2.5em;
   height: 2.5em;
   line-height: 2.5em;
-  border-radius: 50%; }
+  border-radius: 50%;
+  -webkit-mask-image: none; }
 
 .waves-block {
   display: block; }
@@ -5730,7 +5727,6 @@ a.waves-effect .waves-ripple {
   overflow: hidden;
   display: none;
   border-bottom: 1px solid #ddd;
-  -moz-box-sizing: border-box;
   box-sizing: border-box; }
   .collapsible-body p {
     margin: 0;
@@ -5794,8 +5790,7 @@ li.no-padding {
   line-height: 50px;
   bottom: 0px;
   width: 100%;
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   text-align: center;
   padding: 0% 15%;
   height: 50px;
@@ -5916,7 +5911,6 @@ textarea.materialize-textarea {
   margin: 0 0 15px 0;
   padding: 0;
   box-shadow: none;
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
   -webkit-transition: 0.3s;
   transition: 0.3s; }
@@ -6117,8 +6111,7 @@ form p:last-child {
   transform-origin: 100% 100%; }
 
 /* disabled checkbox */
-[type="checkbox"]:disabled:not(:checked) + label:before,
-[type="checkbox"]:disabled:checked + label:before {
+[type="checkbox"]:disabled:not(:checked) + label:before {
   top: 0;
   left: 0;
   box-shadow: none;
@@ -6130,7 +6123,24 @@ form p:last-child {
   -ms-transform: rotateZ(0deg);
   transform: rotateZ(0deg); }
 
-[type="checkbox"]:disabled + label {
+[type="checkbox"]:disabled:checked + label:before {
+  left: -3px;
+  top: -4px;
+  width: 12px;
+  height: 22px;
+  border-top: 2px solid transparent;
+  border-left: 2px solid transparent;
+  border-right: 2px solid rgba(0, 0, 0, 0.26);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.26);
+  -webkit-transform: rotateZ(40deg);
+  -ms-transform: rotateZ(40deg);
+  transform: rotateZ(40deg);
+  -webkit-backface-visibility: hidden;
+  -webkit-transform-origin: 100% 100%;
+  -ms-transform-origin: 100% 100%;
+  transform-origin: 100% 100%; }
+
+[type="checkbox"]:disabled:checked + label {
   color: rgba(0, 0, 0, 0.26); }
 
 [type="checkbox"]:disabled:not(:checked) + label:hover:before {
@@ -6765,8 +6775,7 @@ ul.side-nav.fixed .collapsible-body li.active {
  */
 .gap-patch {
   position: absolute;
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   top: 0;
   left: 45%;
   width: 10%;
@@ -6787,8 +6796,7 @@ ul.side-nav.fixed .collapsible-body li.active {
   border-color: inherit; }
   .circle-clipper .circle {
     width: 200%;
-    -moz-box-sizing: border-box;
-         box-sizing: border-box;
+    box-sizing: border-box;
     height: 100%;
     border-width: 3px;
     /* STROKEWIDTH */
@@ -7162,8 +7170,7 @@ ul.side-nav.fixed .collapsible-body li.active {
   padding: .5em 1.25em;
   width: 1em;
   height: 1em;
-  -moz-box-sizing: content-box;
-       box-sizing: content-box;
+  box-sizing: content-box;
   top: -0.25em; }
 
 .picker__nav--prev {
@@ -7283,12 +7290,15 @@ ul.side-nav.fixed .collapsible-body li.active {
  */
 .picker__footer {
   text-align: center;
+  display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between; }
