--- a/views/main.twig
+++ b/views/main.twig
@@ -2,7 +2,7 @@
 {% block main %}
 <div class="main" role="main">
 	{% if title %}
-		<div class="title-container {{ grid.container() }}"><h1>{{ title }}</h1></div>
+		<div class="title-container{% if layout == '0' %} container{% endif %}"><h1>{{ title }}</h1></div>
 	{% endif %}
 	{% block content %}
 		{{ __( 'Sorry, no content', 'maera' ) }}
