--- a/views/content-entry-content.twig
+++ b/views/content-entry-content.twig
@@ -1,6 +1,6 @@
 {#<?php#}
 {% import 'grid_classes.html.twig' as grid %}
 
-<div class="{{ grid.container() }} entry-content" itemprop="description">
+<div class="{% if layout == '0' %}container {% endif %}entry-content" itemprop="description">
 	{{ post.get_preview }}
 </div>
