--- a/views/content-entry-header.twig
+++ b/views/content-entry-header.twig
@@ -2,13 +2,13 @@
 
 <div class="entry-header">
 	{% if post.thumbnail and theme.theme_mod('feat_img_height', 60) %}
-		<div class="parallax-container featured-image">
-			<a class="parallax featured-image" href="{{ post.link }}" title="{{ post.title }}">
+		<div class="{% if layout == '0' %}parallax-container {% endif %}featured-image">
+			<a class="{% if layout == '0' %}parallax {% endif %}featured-image" href="{{ post.link }}" title="{{ post.title }}">
 				<img class="featured-image" src="{{ post.thumbnail.src|resize(thumbnail.width, thumbnail.height) }}" srcset="{{ post.thumbnail.src|resize(thumbnail.width, thumbnail.height)|retina(1) }} 1x, {{ post.thumbnail.src|resize(thumbnail.width, thumbnail.height)|retina(2) }}  2x">
 			</a>
 		</div>
 	{% endif %}
-	<div class="{{ grid.container() }} entry-content" itemprop="description">
+	<div class="{% if layout == '0' %}container {% endif %}entry-content" itemprop="description">
 		{% do action( 'maera/teaser/start', post.ID ) %}
 		<title itemprop="name">{{ post.title }}</title>
 		<h2 class="entry-title"><a href="{{ post.link }}">{{ post.title|apply_filters( 'maera/title' ) }}</a></h2>
