--- a/views/content-page.twig
+++ b/views/content-page.twig
@@ -1,6 +1,7 @@
 {#<?php#}
 {% include 'content-single-entry-header.twig' %}
-<article {{ function( 'post_class', 'container' ) }} id="content-{{ post.ID }}" itemscope itemtype="http://schema.org/WebPage">
+{% if layout == '0' %}{% set container_class = 'container' %}{% else %}{% set container_class = '' %}{% endif %}
+<article {{ function( 'post_class', container_class ) }} id="content-{{ post.ID }}" itemscope itemtype="http://schema.org/WebPage">
 	{% do action( 'maera/page/pre_content' ) %}
 	{{ post.content }}
 	{% do action( 'maera/page/after_content' ) %}
