--- a/views/main.twig
+++ b/views/main.twig
@@ -2,7 +2,13 @@
 {% block main %}
 <div class="main" role="main">
 	{% if title %}
-		<div class="title-container{% if layout == '0' %} container{% endif %}"><h1>{{ title }}</h1></div>
+		{% if function( 'is_home' ) %}
+			<div class="{{ red|apply_filters('maera/nav/class') }} lighten-2 z-depth-3" style="padding: 20px 0;">
+				<div class="title-container {{ grid.container() }}"><h2 style="margin: 0; color: #fff; font-weight: 100;">{{ title }}</h2></div>
+			</div>
+		{% else %}
+			<div class="title-container {{ grid.container() }}"><h1>{{ title }}</h1></div>
+		{% endif %}
 	{% endif %}
 	{% block content %}
 		{{ __( 'Sorry, no content', 'maera' ) }}
