--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -395,6 +395,19 @@ nav .brand-logo {
     left: 0;
 }
 
-header {
-    margin: 0;
+body {
+    &.layout-0 {
+        header {
+            margin: 0;
+        }
+    }
+    &.layout-1,
+    &.layout-2 {
+        .main-title {
+            margin-top: -5px;
+        }
+        .entry-content {
+            padding: 0 1em 1em 1em;
+        }
+    }
 }
