--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -401,13 +401,13 @@ body {
             margin: 0;
         }
     }
-    &.layout-1,
-    &.layout-2 {
-        .main-title {
-            margin-top: -5px;
-        }
-        .entry-content {
-            padding: 0 1em 1em 1em;
-        }
-    }
+    // &.layout-1,
+    // &.layout-2 {
+    //     .main-title {
+    //         margin-top: -5px;
+    //     }
+    //     .entry-content {
+    //         padding: 0 1em 1em 1em;
+    //     }
+    // }
 }
