--- a/views/comments.twig
+++ b/views/comments.twig
@@ -1,5 +1,5 @@
 {#<?php#}
-<section id="comments" class="{% if layout == '0' %}{{ grid.container() }} {% endif %}comments">
+<section id="comments" class="{% if layout == '0' %}container {% endif %}comments">
 
 	<div class="respond">
 		<h3 class="h2">{{ __( 'Comments', 'maera' ) }}</h3>
