--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -35,6 +35,7 @@ input[type="submit"]:disabled {
   background-color: $button-bg-color-disabled;
   box-shadow: none;
   color: $button-color-disabled;
+  cursor: default;
 
   &:hover {
     background-color: $button-bg-color-disabled;
@@ -110,6 +111,33 @@ input[type="submit"] {
       line-height: $button-floating-size * 1.5;
     }
   }
+
+}
+
+// Fixed Action Button
+.fixed-action-btn {
+  position: fixed;
+  right: 23px;
+  bottom: 23px;
+  padding-top: 15px;
+  margin-bottom: 0;
+  z-index: 1000;
+
+  ul {
+    left: 0;
+    right: 0;
+    text-align: center;
+    position: absolute;
+    bottom: 64px;
+
+    li {
+      margin-bottom: 15px;
+    }
+
+    a.btn-floating {
+      @include opacity(0);
+    }
+  }
 }
 
 // Flat button
@@ -121,6 +149,7 @@ input[type="submit"] {
 
   &.disabled {
     color: lighten(#999, 10%);
+    cursor: default;
   }
 }
 
