fix duplicate checkboxes on comments form

--- a/assets/css/maera-materialize.css
+++ b/assets/css/maera-materialize.css
@@ -8375,3 +8375,7 @@ nav .brand-logo img {
 
 body.layout-0 header {
   margin: 0; }
+
+input #subscribe_comments,
+input #subscribe_blog {
+  display: none; }
