added dropdown menus script

--- a/views/footer.twig
+++ b/views/footer.twig
@@ -21,6 +21,7 @@ $(document).ready(function(){
 	$('.parallax').parallax();
 	$(".button-collapse").sideNav();
 	$("select").material_select();
+	$(".dropdown-button").dropdown();
 });
 </script>
 </body>
