set a min-height for the comments textarea

--- a/assets/css/maera-materialize.css
+++ b/assets/css/maera-materialize.css
@@ -8379,3 +8379,6 @@ body.layout-0 header {
 input #subscribe_comments,
 input #subscribe_blog {
   display: none; }
+
+textarea#comment {
+  min-height: 8em; }
