add script for collapsing navbar

--- a/views/footer.twig
+++ b/views/footer.twig
@@ -22,6 +22,7 @@ $(document).ready(function(){
 	$(".button-collapse").sideNav();
 	$("select").material_select();
 	$(".dropdown-button").dropdown();
+	$(".button-collapse").sideNav();
 });
 </script>
 </body>
