bugfix extra HTML tags in featured image

--- a/views/content-single-entry-header.twig
+++ b/views/content-single-entry-header.twig
@@ -19,7 +19,7 @@
 
 		{% if post.thumbnail and theme.theme_mod('feat_img_height', 60) %}
 			<div class="featured-image">
-				<a class="featured-image" href="{{ post.link }}" title="{{ post.title }}">
+				<a class="featured-image" href="{{ post.link }}">
 					<img class="featured-image" src="{{ post.thumbnail.src }}">
 				</a>
 			</div>
